--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "serverless",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "cors": "^2.8.4",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "underscore": "^1.8.3"
