--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+//private key - 87a62f921a4b37b56a6b99c1a651da89ee7bad2b
+//public key - 8877f965d7510b2815fab7b05cd3a880
